--- a/app/globals.css
+++ b/app/globals.css
@@ -3,19 +3,16 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --blue: #0066cc;
+  --orange: #ff4d00;
+  --white: #ffffff;
+  --light-gray: #e6e6e6;
+  --dark-gray: #2b2b2b;
+  --dark: #0a0a0a;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Roboto, Helvetica, sans-serif;
+  background-color: var(--light-gray);
+  color: var(--dark);
 }
